<resources>
    <string name="app_name">FormulirFGD</string>
    <string name="tittle_app">Daftar Hadir FGD</string>
    <string name="tittle_app_result">Anda Telah Berhasil Terdaftarkan</string>
    <string name="nama_hint">Ketikan Nama Lengkap Anda</string>
    <string name="nama">Nama Anda</string>
    <string name="telepon">No HP Aktif</string>
    <string name="telepon_hint">Ketikan No HP Aktif Anda</string>
    <string name="email">Email Anda</string>
    <string name="email_hint">Ketikan Email Anda</string>

    <string name="rad_gender">Jenis Kelamin</string>
    <string name="rad_laki">Laki-laki</string>
    <string name="rad_perempuan">Perempuan</string>

    <string name="chk_skillset">SkillSet Anda</string>
    <string name="chk_algo">Algoritma</string>
    <string name="chk_problem_solving">Problem Solving</string>
    <string name="chk_programming">Programming</string>
    <string name="chk_designthinking">Design Thinking</string>
    <string name="chk_criticalthinking">Critical Thinking</string>

    <string name="kategori">Kategori Peserta</string>
    <string name="submit">Submit</string>
    <string name="developer">info developer</string>

    <string-array name="kategori_peserta">
        <item>Akademisi</item>
        <item>Komunitas</item>
        <item>Organisasi</item>
        <item>Media</item>
        <item>Bisnis</item>
    </string-array>
</resources>